# posts_api

./: .gitignore  README.md
node/: index.js  package.json
rust/: Cargo.toml
rust/src/: main.rs
scripts/: create_db.sh  insert.sql  insert_data.sh  schema.sql
