[package]
name = "posts_api"
version = "0.1.0"
authors = ["Philip Van Raalte <phil.vanraalte@gmail.com>"]
edition = "2018"

[dependencies]
tower-web = "0.3.7"
sqlite = "0.24.0"
tokio = "0.1.19"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde_plain = "0.3.0"
serde_urlencoded = "0.5.1"